# CI-Hands-On

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml  onPush.yaml  tests.yaml
src/: CMakeLists.txt  main.cc
src/Bar/: Bar.cc  CMakeLists.txt
src/Bar/include/: Bar.h
src/Foo/: CMakeLists.txt  Foo.cc
src/Foo/include/: Foo.h
tests/: CMakeLists.txt
tests/BarTests/: BarTests.cc  CMakeLists.txt
tests/FooTests/: CMakeLists.txt  FooTests.cc
